manifests/base/2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  selector:
    matchLabels:
      app: web-app
  replicas: 1
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: DOCKER_IMAGE
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "50m"
              memory: "512Mi"
            requests:
              cpu: 10m
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            failureThreshold: 10
            periodSeconds: 10
