manifests/base/3-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: web-app
